add JCPP_INSTALL_INCLUDE_DIR, etc

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -126,19 +126,19 @@ endif()
 
 install(
 	DIRECTORY "share/include/"
-	DESTINATION "include"
+	DESTINATION "${JCPP_INSTALL_INCLUDE_DIR}"
 )
 
 if(JCPP_OS MATCHES "windows")
 	install(
 		DIRECTORY "windows/include/"
-		DESTINATION "include"
+		DESTINATION "${JCPP_INSTALL_INCLUDE_DIR}"
 	)
 endif()
 
 if(INSTALL_TO_REPO)
 	install(
 		FILES "share/dependencies.txt"
-		DESTINATION "."
+		DESTINATION "${JCPP_INSTALL_DIR}"
 	)
 endif()
